--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "immutable": "^4.0.0-rc.12",
+    "jqtree": "^1.4.11",
+    "jquery": "^3.4.1",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
+    "react-json-tree": "^0.11.2",
     "react-scripts": "2.1.3"
   },
   "scripts": {
